# TEKO-S5-Rubiks-Cube-Solver

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE_MIT  Makefile  README.md  docker-compose.yaml  index.html  package-lock.json  package.json
.github/workflows/: build.yml  lint.yml  rust_build_and_test.yml  test.yml
rubiks-cube-solver/www/: index.js  package-lock.json  package.json
src/: cube.rs  cubie_cube.rs  facelet_cube.rs  lib.rs  moves.rs  pochmann_solver.rs  sub_cube.rs  utils.rs
src/cube/: facelet.rs  mod.rs  solvers.rs  sub.rs
src/cube/solvers/: pochmann.rs
static/config/: config.json
static/js/: controls.js  cube.js  main.js  subcube.js
www/: .eslintrc.js  README.md  bootstrap.js  index.html  index.js  package-lock.json  package.json  vite.config.js  webpack.config.js
www/static/config/: config.json  cubeStateMapping.json
www/static/css/: style.css
www/static/js/: controls.js  cube.js  face.js  main.js  skybox.js  steps.js  subBall.js  subcube.js
