[package]
name = "rubiks-cube-solver"
version = "0.1.0"
authors = ["sirh3e <sirh3e@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.91"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.68"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.41"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
